# hive

./: .gitignore  README.md
.humanize/rlcr/2026-04-13_18-04-20/: goal-tracker.md  round-1-summary.md  round-2-contract.md  round-2-summary.md
crates/hive-adapter/: Cargo.toml
crates/hive-adapter/src/: claude.rs  codex.rs  generic.rs  lib.rs
crates/hive-audit/: Cargo.toml
crates/hive-audit/src/: lib.rs
crates/hive-cli/src/: main.rs
crates/hive-cli/src/commands/: audit.rs  doctor.rs  init.rs  isolate.rs  merge.rs  mod.rs  report.rs  retry.rs  rfc.rs  runtime.rs  show.rs  status.rs
crates/hive-core/: Cargo.toml
crates/hive-core/src/: config.rs  error.rs  lock.rs  state.rs  storage.rs
crates/hive-core/tests/: state_machine_integration.rs
crates/hive-git/src/: branch.rs  lib.rs  merge.rs  worktree.rs
docs/: architecture-review.md  v2-design-notes.md
docs/superpowers/plans/: 2026-04-13-hive-design-plan.md
docs/superpowers/specs/: 2026-04-13-hive-design.md
hive/: Cargo.toml
hive/crates/hive-audit/: Cargo.toml
hive/crates/hive-audit/src/: lib.rs
hive/crates/hive-cli/: Cargo.toml
hive/crates/hive-cli/src/commands/: approve.rs  check.rs  claim.rs  cleanup.rs  config.rs  doctor.rs  exec.rs  graph.rs  init.rs  isolate.rs  launch.rs  list_tasks.rs  merge.rs  mod.rs  report.rs  retry.rs  rfc.rs  show.rs  status.rs
hive/crates/hive-cli/tests/: exec_flow.rs
hive/crates/hive-core/: Cargo.toml
hive/crates/hive-core/src/: config.rs  frontmatter.rs  lib.rs  lock.rs  skill.rs  state.rs  storage.rs  task.rs
hive/crates/hive-core/tests/: state_machine_integration.rs
hive/crates/hive-git/: Cargo.toml
hive/crates/hive-git/src/: branch.rs  lib.rs  merge.rs  worktree.rs
tests/: integration-strategy.md
