[package]
name = "hive-audit"
version.workspace = true
edition.workspace = true

[dependencies]
hive-core = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
dirs-next = "2"

[dev-dependencies]
tempfile = "3"
