[package]
name = "hive-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
